objects/LLC_BI__Requirement_Template__mdt.object
<CustomObject>
    <description>A Requirement Template serves as a model used to create a Requirement for a particular Checklist.</description>
    <fields>
        <fullName>LLC_BI__Advanced_Criteria__c</fullName>
        <description>This required field contains a reference to the Advanced Criteria to which this Requirement Template belongs.</description>
        <inlineHelpText>This required field contains a reference to the Advanced Criteria to which this Requirement Template belongs.</inlineHelpText>
        <label>Advanced Criteria</label>
        <referenceTo>LLC_BI__Advanced_Criteria__mdt</referenceTo>
        <relationshipLabel>Requirement Templates</relationshipLabel>
        <relationshipName>Requirement_Templates</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Assignee__c</fullName>
        <description>This optional field contains the id of the User or Queue to whom Requirements based on this model are assigned. It should be copied to the Owner field on Requirement records created from this template.</description>
        <inlineHelpText>This optional field contains the id of the User or Queue to whom Requirements based on this model are assigned. It should be copied to the Owner field on Requirement records created from this template.</inlineHelpText>
        <label>Assignee</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Checklist__c</fullName>
        <description>This required field contains a reference to the Checklist Template to which this Requirement Template belongs.</description>
        <inlineHelpText>This required field contains a reference to the Checklist Template to which this Requirement Template belongs.</inlineHelpText>
        <label>Checklist</label>
        <referenceTo>LLC_BI__Checklist_Template__mdt</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Checkpoint_Context__c</fullName>
        <description>This optional field contains a reference to a Context object which associates a SObjectField to a SObjectType.</description>
        <label>Checkpoint Context</label>
        <referenceTo>LLC_BI__Context__mdt</referenceTo>
        <relationshipLabel>Requirement Templates</relationshipLabel>
        <relationshipName>Requirement_Templates</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Checkpoint_Value__c</fullName>
        <description>This optional field contains a value that represents a stage in a transaction when this requirement will be used.</description>
        <inlineHelpText>A value that represents a stage in a transaction when this requirement will be used.</inlineHelpText>
        <label>Checkpoint Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field contains the user facing description of the requirement based on this model.</description>
        <inlineHelpText>This field contains the user facing description of the requirement based on this model.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Duration_Days__c</fullName>
        <description>This optional field contains the number of days expected to complete Requirements based on this model.  It should be copied to the Expected Durations Days field on Requirement records created from this template.</description>
        <inlineHelpText>This optional field contains the number of days expected to complete Requirements based on this model.  It should be copied to the Expected Durations Days field on Requirement records created from this template.</inlineHelpText>
        <label>Expected Duration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hard_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to indicate that this Requirement must be completed before the Context Object can move beyond the Checkpoint Context.</description>
        <inlineHelpText>Check this field to indicate that this Requirement must be completed before the Context Object can move beyond the Checkpoint Context.</inlineHelpText>
        <label>Hard Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This optional field specifies the sequence in which Requirements based on this model should be completed.  It should be copied to the Order field on Requirement records created from this template.</description>
        <inlineHelpText>This optional field specifies the sequence in which Requirements based on this model should be completed.  It should be copied to the Order field on Requirement records created from this template.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Title__c</fullName>
        <description>This required field contains the user facing name of Requirements based on this model. It should be copied to the Name field on Requirement records created from this template.</description>
        <inlineHelpText>This required field contains the user facing name of Requirements based on this model. It should be copied to the Name field on Requirement records created from this template.</inlineHelpText>
        <label>Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Requirement Template</label>
    <pluralLabel>Requirement Templates</pluralLabel>
</CustomObject>